objects/Idea.object
<CustomObject>
    <fields>
        <fullName>Complexity__c</fullName>
        <formula>TEXT( Request__r.ESN_RQT_Feasibility__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complexity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detected_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Idea provided by</inlineHelpText>
        <label>Detected by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Solution__c</fullName>
        <description>Visible to Central Team</description>
        <label>Estimated Solution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Estimated_Workload__c</fullName>
        <inlineHelpText>Man/Days</inlineHelpText>
        <label>Estimated Workload</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Idea_number__c</fullName>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Idea number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Out_of_scope__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used by Global Team in order to directly exclude the request without submitted it to the Change Board. Out if it&apos;s checked.</inlineHelpText>
        <label>Out of Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>TEXT(Request__r.Priority__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <formula>Request__r.Release__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sheduled for the release.</inlineHelpText>
        <label>Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Id</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Ideas</relationshipLabel>
        <relationshipName>Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score_Card_Result__c</fullName>
        <inlineHelpText>Related to the Excel matrix.</inlineHelpText>
        <label>Score-Card Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>change_board_comments__c</fullName>
        <label>Change Board Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <listViews>
        <fullName>All_Ideas</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>COMMUNITY.NAME</columns>
        <columns>IDEA.IDEA_THEME</columns>
        <filterScope>Everything</filterScope>
        <label>All Ideas</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ideas_Last_7_Days</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>COMMUNITY.NAME</columns>
        <columns>IDEA.IDEA_THEME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDEA.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Last 7 Days</label>
    </listViews>
    <listViews>
        <fullName>My_Ideas</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>COMMUNITY.NAME</columns>
        <columns>IDEA.IDEA_THEME</columns>
        <filterScope>Mine</filterScope>
        <label>My Ideas</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>InternalIdeasIdeaRecordType</fullName>
        <active>true</active>
        <description>Record Type used to associate ideas with a specific community</description>
        <label>Pernod Ricard Chatter: Idea Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ID_VR01_RequestIdShouldBeFilledIfUnder</fullName>
        <active>true</active>
        <description>The Request Id field have to be filled if status is under consideration.</description>
        <errorConditionFormula>AND(ISPICKVAL( Status , &quot;Under Consideration&quot;),  Request__c =&quot;&quot;)</errorConditionFormula>
        <errorMessage>If the idea is &quot;Under Consideration&quot;, the Request Id has to be fulfilled.</errorMessage>
    </validationRules>
</CustomObject>